version/0.9/_sources/api/ansys/speos/core/sensor/BaseSensor.LayerTypeFace.rst.txt






:class:`LayerTypeFace`
======================


.. py:class:: ansys.speos.core.sensor.BaseSensor.LayerTypeFace(layer_type_face, default_parameters = None, stable_ctr = False)

   
   Type of layer : Face.

   Includes in the result one layer per surface selected.
   By default, a filtering mode by last impact is chosen.

   :Parameters:

       **layer_type_face** :         :obj:`ansys.api.speos.scene.v2.scene_pb2.Scene.SensorInstance.LayerTypeFace`
           LayerTypeFace protobuf object to modify.

       **default_parameters** : :obj:`ansys.speos.core.generic.parameters.LayerByFaceParameters`, :obj:`optional`
           If defined the values in the sensor instance will be overwritten by the values of the
           data class

       **stable_ctr** : :ref:`bool <python:bltin-boolean-values>`
           Variable to indicate if usage is inside class scope











   .. rubric:: Notes

   **Do not instantiate this class yourself**, use set_layer_type_face method available in
   sensor classes.



   ..
       !! processed by numpydoc !!


.. py:currentmodule:: LayerTypeFace

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~set_sca_filtering_mode_intersected_one_time`
            - Set the filtering mode as intersected one time.
          * - :py:attr:`~set_sca_filtering_mode_last_impact`
            - Set the filtering mode as last impact.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~layers`
            - List of Face layer Groups of this sensor.







Import detail
-------------

.. code-block:: python

    from ansys.speos.core.sensor.BaseSensor import LayerTypeFace

Property detail
---------------

.. py:property:: layers
   :type: List[BaseSensor]


   
   List of Face layer Groups of this sensor.


   :Parameters:

       **values** : :obj:`List`\[:obj:`ansys.speos.core.sensor.BaseSensor.FaceLayer`]
           List of layers



   :Returns:

       :obj:`List`\[:obj:`ansys.speos.core.sensor.BaseSensor.FaceLayer`]
           list of FaceLayer Classes











   ..
       !! processed by numpydoc !!




Method detail
-------------

.. py:method:: set_sca_filtering_mode_intersected_one_time()

   
   Set the filtering mode as intersected one time.





   :Returns:

       :obj:`ansys.speos.core.sensor.BaseSensor.LayerTypeFace`
           LayerTypeFace.











   ..
       !! processed by numpydoc !!

.. py:method:: set_sca_filtering_mode_last_impact()

   
   Set the filtering mode as last impact.





   :Returns:

       :obj:`ansys.speos.core.sensor.BaseSensor.LayerTypeFace`
           LayerTypeFace.











   ..
       !! processed by numpydoc !!




